Closed
Bug 1535790
Opened 6 years ago
Closed 6 years ago
[gtk] Calling into GTK early from xpcshell tests crashes.
Categories
(Core :: Widget: Gtk, defect)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
mozilla67
Tracking | Status | |
---|---|---|
firefox67 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(1 file)
See the logs here:
https://treeherder.mozilla.org/logviewer.html#?job_id=233989479&repo=try
I could reproduce locally and have a fix / workaround.
Assignee | ||
Comment 1•6 years ago
|
||
A patch of mine starts calling nsLookAndFeel from xpcshell tests, which makes
gtk crash eventually.
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/786be6f1f8e0
Initialize members in nsLookAndFeel, and bail out when there's no screen settings. r=stransky
Comment 3•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox67:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
You need to log in
before you can comment on or make changes to this bug.
Description
•