Bug 1535790 - Initialize members in nsLookAndFeel, and bail out when there's no screen settings. r=stransky

A patch of mine starts calling nsLookAndFeel from xpcshell tests, which makes
gtk crash eventually.

Differential Revision: https://phabricator.services.mozilla.com/D23759